# start-opengl

./: .gitignore  .travis.yml  CMakeLists.txt  CPPLINT.cfg  LICENSE  Makefile  README.md  appveyor.yml
cmake/: global.cmake  global_macros.cmake
cmake/modules/: FindASSIMP.cmake  FindGLM.cmake
scripts/: init.sh  init_tools.sh
scripts/common/: detect.sh  echo.sh  host.sh  mkdir.sh  string.sh
src/: CMakeLists.txt  glfw_demo.cpp
src/base/: glfw_base.cpp  glfw_base.h  glfw_base_types.h
src/learnopengl/: CMakeLists.txt  CPPLINT.cfg
src/learnopengl/1_getting_started/: 2_1_hello_triangle.cpp  3_1_shaders_uniform.cpp  3_2_shaders_interpolation.cpp  4_1_textures.cpp  4_2_textures_combined.cpp  5_1_transformations.cpp  6_1_coordinate_systems.cpp  6_2_coordinate_systems_depth.cpp  6_3_coordinate_systems_multiple.cpp  7_1_camera_circle.cpp  7_2_camera_keyboard_dt.cpp  7_3_camera_mouse_zoom.cpp  7_4_camera_class.cpp  CMakeLists.txt
src/learnopengl/2_lighting/: 1_colors.cpp  2_1_basic_lighting_diffuse.cpp  2_2_basic_lighting_specular.cpp  3_1_materials.cpp  4_1_lighting_maps_diffuse.cpp  4_2_lighting_maps_specular.cpp  5_1_light_casters_directional.cpp  5_2_light_casters_point.cpp  5_3_light_casters_spot.cpp  5_4_light_casters_spot_soft.cpp  6_multiple_lights.cpp  CMakeLists.txt
src/learnopengl/3_model_loading/: 1_model_loading.cpp  CMakeLists.txt
src/learnopengl/4_advanced_opengl/: 10_1_instancing_quads.cpp  10_2_asteroids.cpp  10_3_asteroids_instanced.cpp  11_anti_aliasing_multisampling.cpp  11_anti_aliasing_offscreen.cpp  1_1_depth_testing.cpp  2_stencil_testing.cpp  3_1_blending_discard.cpp  3_2_blending_sorted.cpp  4_face_culling.cpp  5_1_framebuffers.cpp  6_1_cubemaps_skybox.cpp  6_2_cubemaps_environment_mapping.cpp  6_3_cubemaps_reflection_model.cpp  8_advanced_glsl_ubo.cpp  9_1_geometry_shader_houses.cpp  9_2_geometry_shader_exploding.cpp  9_3_normal_visualization.cpp  CMakeLists.txt
src/learnopengl/5_advanced_lighting/: 1_advanced_lighting.cpp  2_gamma_correction.cpp  CMakeLists.txt
src/learnopengl/common/: camera.h  cube.h  mesh.h  model.h  shader.h  stb_image_impl.h  texture.h
src/learnopengl/objects/: README
src/opengl-tutorial/: CMakeLists.txt  CPPLINT.cfg
src/opengl-tutorial/common/: shader.cpp  shader.h
src/opengl-tutorial/t03_matrices/: t03_matrices.cpp
